--- a/asset.yaml
+++ b/asset.yaml
@@ -3162,6 +3162,208 @@ spec:
     name: Node
     language: Javascript
 ---
+# FUNCTION - Taxi Auth
+apiVersion: function/v1
+kind: Function
+metadata:
+  name: taxi-auth-3
+spec:
+  description: Taxi auth function
+  language: javascript
+  timeout: 40
+  environment:
+    - name: SECRET_API_KEY
+      value: 5ks9718kiybw51i
+    - name: TAXI_USER_BUCKET
+      value: 5fe059c3bf26e5002c60cb14
+    - name: TAXI_PUBLIC_POLICY
+      value: 5fe20efddfdd0f002c91ee06
+  dependency:
+    - name: "@spica-devkit/bucket"
+      version: ^0.8.7
+      types:
+        node_modules/@spica-devkit/bucket/dist/index.d.ts: |
+          /// <amd-module name="@spica-devkit/bucket" />
+          export * from "./src/index";
+        node_modules/@spica-devkit/bucket/dist/src/bucket.d.ts: >
+          /// <amd-module name="@spica-devkit/bucket/src/bucket" />
+
+          import { Bucket, BucketDocument, ApikeyInitialization, IdentityInitialization, IndexResult } from "@spica-devkit/bucket";
+
+          import { Observable } from "rxjs";
+
+          export declare function initialize(options: ApikeyInitialization | IdentityInitialization): void;
+
+          export declare function get(id: string): Promise<Bucket>;
+
+          export declare function getAll(): Promise<Bucket[]>;
+
+          export declare function insert(bucket: Bucket): Promise<Bucket>;
+
+          export declare function update(id: string, bucket: Bucket): Promise<Bucket>;
+
+          export declare function remove(id: string): Promise<any>;
+
+          export declare namespace data {
+              function get(bucketId: string, documentId: string, options?: {
+                  headers?: object;
+                  queryParams?: object;
+              }): Promise<BucketDocument>;
+              function getAll(bucketId: string, options?: {
+                  headers?: object;
+                  queryParams?: object;
+              }): Promise<BucketDocument[] | IndexResult<BucketDocument>>;
+              function insert(bucketId: string, document: BucketDocument): Promise<BucketDocument>;
+              function update(bucketId: string, documentId: string, document: BucketDocument): Promise<BucketDocument>;
+              function patch(bucketId: string, documentId: string, document: Partial<BucketDocument>): Promise<any>;
+              function remove(bucketId: string, documentId: string): Promise<any>;
+              namespace realtime {
+                  function get(bucketId: string, documentId: string): Observable<BucketDocument>;
+                  function getAll(bucketId: string, queryParams?: object): Observable<BucketDocument[]>;
+              }
+          }
+        node_modules/@spica-devkit/bucket/dist/src/index.d.ts: |
+          /// <amd-module name="@spica-devkit/bucket/src/index" />
+          export * from "./bucket";
+          export * from "./interface";
+        node_modules/@spica-devkit/bucket/dist/src/interface.d.ts: |
+          /// <amd-module name="@spica-devkit/bucket/src/interface" />
+          import { JSONSchema7, JSONSchema7TypeName } from "json-schema";
+          export interface Bucket {
+              _id?: string;
+              title: string;
+              icon?: string;
+              description: string;
+              primary: string;
+              history?: boolean;
+              properties: {
+                  [key: string]: JSONSchema7 & PropertyOptions;
+              };
+              order?: number;
+          }
+          interface PropertyOptions {
+              type: JSONSchema7TypeName | JSONSchema7TypeName[] | string;
+              options: {
+                  translate?: boolean;
+                  history?: boolean;
+                  position: "left" | "right" | "bottom";
+              };
+          }
+          export interface BucketDocument {
+              _id?: string;
+              [key: string]: any | undefined;
+          }
+          export interface Sequence {
+              kind: SequenceKind;
+              item: string;
+              at: number;
+              with?: string;
+          }
+          export declare enum SequenceKind {
+              Delete = 0,
+              Substitute = 1,
+              Insert = 2
+          }
+          export interface StreamChunk<T = any> {
+              kind: ChunkKind;
+              document?: T;
+              sequence?: Sequence[];
+          }
+          export declare enum ChunkKind {
+              Error = -1,
+              Initial = 0,
+              EndOfInitial = 1,
+              Insert = 2,
+              Delete = 3,
+              Expunge = 4,
+              Update = 5,
+              Replace = 6,
+              Order = 7
+          }
+          interface InitializeOptions {
+              publicUrl?: string;
+          }
+          export interface ApikeyInitialization extends InitializeOptions {
+              apikey: string;
+          }
+          export interface IdentityInitialization extends InitializeOptions {
+              identity: string;
+          }
+          export interface InitializationResult {
+              authorization: string;
+              publicUrl: string;
+          }
+          export interface IndexResult<T> {
+              meta: {
+                  total: number;
+              };
+              data: T[];
+          }
+          export {};
+        node_modules/@spica-devkit/bucket/dist/src/operators.d.ts: >
+          /// <amd-module name="@spica-devkit/bucket/src/operators" />
+
+          import { Sequence } from "@spica-devkit/bucket";
+
+          import { Observable } from "rxjs";
+
+          export declare class IterableSet<T> implements Iterable<T> {
+              ids: string[];
+              dataset: Map<string, T>;
+              order(sequences: Sequence[]): void;
+              set(id: string, value: any): void;
+              delete(id: string, index?: number): void;
+              [Symbol.iterator](): Iterator<T, any, undefined>;
+          }
+
+          export declare function getWsObs<T>(url: string, sort?: object): Observable<T[]>;
+    - name: jsonwebtoken
+      version: ^8.5.1
+      types: {}
+    - name: jwt-decode
+      version: ^3.1.2
+      types:
+        node_modules/jwt-decode/index.d.ts: |
+          export class InvalidTokenError extends Error {}
+
+          export interface JwtDecodeOptions {
+            header?: boolean;
+          }
+
+          export interface JwtHeader {
+            type?: string;
+            alg?: string;
+          }
+
+          export interface JwtPayload {
+            iss?: string;
+            sub?: string;
+            aud?: string[] | string;
+            exp?: number;
+            nbf?: number;
+            iat?: number;
+            jti?: string;
+          }
+
+          export default function jwtDecode<T = unknown>(
+            token: string,
+            options?: JwtDecodeOptions
+          ): T;
+    - name: node-fetch
+      version: ^2.6.1
+      types: {}
+    - name: request
+      version: ^2.88.2
+      types: {}
+    - name: util
+      version: ^0.12.3
+      types: {}
+  title: Taxi Auth
+  code: ./function/taxi-auth-3.js
+  runtime:
+    name: Node
+    language: Javascript
+---
 # TRIGGER - rideAccept
 apiVersion: function/v1
 kind: Trigger
@@ -3213,3 +3415,45 @@ spec:
   httpOptions:
     method: Get
     path: /summary_rating
+---
+# TRIGGER - register
+apiVersion: function/v1
+kind: Trigger
+metadata:
+  name: register
+spec:
+  type: http
+  active: true
+  name: register
+  func: taxi-auth-3
+  httpOptions:
+    method: Post
+    path: /register
+---
+# TRIGGER - login
+apiVersion: function/v1
+kind: Trigger
+metadata:
+  name: login
+spec:
+  type: http
+  active: true
+  name: login
+  func: taxi-auth-3
+  httpOptions:
+    method: Post
+    path: /login
+---
+# TRIGGER - checkUser
+apiVersion: function/v1
+kind: Trigger
+metadata:
+  name: checkUser
+spec:
+  type: http
+  active: true
+  name: checkUser
+  func: taxi-auth-3
+  httpOptions:
+    method: Get
+    path: /check_user
